Limpezas de nulos em mapas e excecoes inuteis