@@ -4,6 +4,7 @@ import org.jspecify.annotations.Nullable;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.Named;
+import sgc.comum.config.CentralMapperConfig;
 import sgc.mapa.dto.CompetenciaMapaDto;
 import sgc.mapa.dto.MapaCompletoDto;
 import sgc.mapa.model.Atividade;
@@ -11,20 +12,17 @@ import sgc.mapa.model.Competencia;
 import sgc.mapa.model.Mapa;
 
 import java.util.List;
-import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-@Mapper(componentModel = "spring")
+@Mapper(config = CentralMapperConfig.class, unmappedTargetPolicy = org.mapstruct.ReportingPolicy.IGNORE)
 public interface MapaCompletoMapper {
-    default @Nullable MapaCompletoDto toDto(Mapa mapa, @Nullable Long codSubprocesso, List<Competencia> competencias) {
+    default MapaCompletoDto toDto(Mapa mapa, @Nullable Long codSubprocesso, List<Competencia> competencias) {
         return MapaCompletoDto.builder()
                 .codigo(mapa.getCodigo())
                 .subprocessoCodigo(codSubprocesso)
                 .observacoes(mapa.getObservacoesDisponibilizacao())
                 .competencias(competencias.stream()
                         .map(this::toDto)
-                        .filter(Objects::nonNull)
                         .toList())
                 .build();
     }
@@ -32,13 +30,12 @@ public interface MapaCompletoMapper {
     @Mapping(target = "codigo", source = "codigo")
     @Mapping(target = "descricao", source = "descricao")
     @Mapping(target = "atividadesCodigos", source = "atividades", qualifiedByName = "mapAtividadesCodigos")
-    @Nullable CompetenciaMapaDto toDto(@Nullable Competencia competencia);
+    CompetenciaMapaDto toDto(Competencia competencia);
 
     @Named("mapAtividadesCodigos")
     default List<Long> mapAtividadesCodigos(Set<Atividade> atividades) {
         return atividades.stream()
                 .map(Atividade::getCodigo)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
